Closed Bug 181404 Opened 23 years ago Closed 23 years ago

[gtk2] crash when printing page with <select> dropdown menu [@ moz_drawingarea_set_visibility ]

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: notting, Assigned: blizzard)

References

Details

(Keywords: crash)

Crash Data

Attachments

(4 files)

User-Agent: WebMonkey/7.1 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3a) Gecko/20021114 Printing to a file some driving directions on yahoo, mozilla crashes. Of note is that it crashes the window manager while it's at it, but that's probably unrelated. Reproducible: Always Steps to Reproduce: 1. Go to yahoo 2. Print out driving directions to a file 3. Crash Actual Results: Crash. Expected Results: No crash. :) I'll attach the traceback.
Attached file segfault traceback
Didn't find dupes, marking NEW.
Assignee: asa → jaggernaut
Status: UNCONFIRMED → NEW
Component: Browser-General → XP Toolkit/Widgets
Ever confirmed: true
Keywords: crash
QA Contact: asa → jrgm
Summary: [gtk2] crash when printing to file → [gtk2] crash when printing to file [@ moz_drawingarea_set_visibility ]
#0 moz_drawingarea_set_visibility (drawingarea=0x0, visibility=0) at mozdrawingarea.c:209 #1 0x40b04a66 in nsWindow::NativeShow(int) (this=0x8a14db8, aAction=0) at nsWindow.cpp:2301 #2 0x40b0a92e in nsCommonWidget::Show(int) (this=0x0, aState=144788920) at nsCommonWidget.cpp:343 #3 0x41df78eb in nsView::SetVisibility(nsViewVisibility) (this=0x0, aVisibility=nsViewVisibility_kHide) at nsView.cpp:574 Mozilla crashes because drawingarea is NULL crash is in gtk2 code and gtk1 works fine ==> blizzard
Assignee: jaggernaut → blizzard
Attached file testcase
all that's needed is a <select> dropdown menu
printing to printer also crashes
Summary: [gtk2] crash when printing to file [@ moz_drawingarea_set_visibility ] → [gtk2] crash when printing page with <select> dropdown menu [@ moz_drawingarea_set_visibility ]
Blocks: gtk2
I can confirm this - this url http://www.gnomedesktop.org/article.php?sid=776&mode=thread&order=0 crashes mozilla on print the attachment test.html (which only has drop-downs removed) prints with no problems
Attached patch patchSplinter Review
I think we're going to need some more paint down here to cover up this blemish.
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 184941 has been marked as a duplicate of this bug. ***
Crash Signature: [@ moz_drawingarea_set_visibility ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: