Bug #181404. Crash when printing page with <select> dropdown menu [@ moz_drawingarea_set_visibility ].  Some of the printing and view code tries to set visiblity and sizes on widgets without creating them first.  Woo.